@@ -1,5 +1,8 @@
 18 February 2010: Wouter
 	- A little more strict DS scrubbing.
+	- No more blacklisting of unresponsive servers, a 2 minute timeout
+	  is backed off to.
+	- RD flag not enabled for dnssec-blacklisted tries, unless necessary.
 
 17 February 2010: Wouter
 	- Disregard DNSKEY from authority section for chain of trust.
